# jlab

./: .env.pep  .gitignore  Dockerfile  LICENSE  docker-compose.yml
db_connections/: pyproject.toml
db_connections/db_connections/: __init__.py  centricity.py  ecap.py  mariadb.py  oracle.py  sybase.py
notebooks/: sample.ipynb
notebooks/ecap/: 239715_Olga_Extraccions_Falset.ipynb
notebooks/rafa/inas/: ecap_etl.ipynb  etl.ipynb  inas_pep_v1.pbit  ssf.csv  tam.csv
